Docker setup for CRA

--- a/package.json
+++ b/package.json
@@ -25,6 +25,17 @@
     "cypress:run": "./node_modules/.bin/cypress run",
     "cypress:open": "./node_modules/.bin/cypress open",
     "deploy:test": "yarn build && netlify deploy --prod",
+    "deploy": "netlify deploy",
+    "docker:build": "docker build . -t tgrrr/cra-docker",
+    "docker:publish": "docker image push $npm_package_config_imageRepo:$npm_package_version",
+    "docker:pull": "docker pull tgrrr/cra-docker:latest",
+    "predocker:run": "echo \"\\x1b[104m\\x1b[97m\n[ you can now open this in your browser at localhost:8080 ]\n\\x1b[0m\"",
+    "docker:run": "docker run -p 8080:80 tgrrr/cra-docker",
+    "postdocker:run": "echo \"\\x1b[104m\\x1b[97m\n[ And... closed ]\n\\x1b[0m\"",
+    "eslint": "eslint src/. --fix-dry-run --config .eslintrc.json",
+    "eslint:fix": "eslint src/. --fix --config .eslintrc.json",
+    "setup:docker": "npm run docker:pull",
+    "start:docker": "npm run docker:run",
     "start": "react-scripts start",
     "watch": "react-scripts start",
     "test": "npm run cypress:run",
