Netlify build, disable search engine indexing, readme fix

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-booking-page",
   "version": "0.1.0",
-  "private": true,
+  "homepage": ".",
+  "private": false,
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
@@ -12,14 +13,19 @@
     "react-scripts": "3.3.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "@testing-library/cypress": "^5.0.2",
-    "eslint": "^6.7.1",
+    "@testing-library/dom": "^6.10.1",
+    "cypress": "^3.7.0",
+    "cypress-cucumber-preprocessor": "^1.18.0",
+    "cypress-dark": "^1.7.14",
+    "cypress-eslint-preprocessor": "^1.2.2",
+    "cypress-react-unit-test": "^2.4.3",
+    "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "uuid": "^3.3.3"
+    "eslint-plugin-chai-friendly": "^0.5.0",
+    "eslint-plugin-cucumber": "^1.4.0",
+    "eslint-plugin-cypress": "^2.7.0",
+    "eslint-plugin-react-hooks": "^2.3.0"
   },
   "scripts": {
     "cypress:run": "./node_modules/.bin/cypress run",
@@ -55,20 +61,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@testing-library/cypress": "^5.0.2",
-    "@testing-library/dom": "^6.10.1",
-    "cypress": "^3.7.0",
-    "cypress-cucumber-preprocessor": "^1.18.0",
-    "cypress-dark": "^1.7.14",
-    "cypress-eslint-preprocessor": "^1.2.2",
-    "cypress-react-unit-test": "^2.4.3",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-chai-friendly": "^0.5.0",
-    "eslint-plugin-cucumber": "^1.4.0",
-    "eslint-plugin-cypress": "^2.7.0",
-    "eslint-plugin-react-hooks": "^2.3.0"
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true
