--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "react-booking-page",
   "version": "0.1.0",
   "homepage": ".",
+  "license": "UNLICENSED",
   "private": false,
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.15",
+    "popper.js": "^1.16.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "typescript": "^3.7.4"
   },
   "devDependencies": {
     "@testing-library/cypress": "^5.0.2",
@@ -25,6 +29,7 @@
     "eslint-plugin-chai-friendly": "^0.5.0",
     "eslint-plugin-cucumber": "^1.4.0",
     "eslint-plugin-cypress": "^2.7.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react-hooks": "^2.3.0"
   },
   "scripts": {
